Paso 9 terminado
