# src/main/java/com/ejemplo/demo/api/controller/SaludoController.java
@@ -1,55 +1,37 @@
 package com.ejemplo.demo.api.controller;
 
 import org.springframework.http.ResponseEntity;
-import org.springframework.web.bind.annotation.GetMapping;
-import org.springframework.web.bind.annotation.RequestMapping;
-import org.springframework.web.bind.annotation.RestController;
 import com.ejemplo.demo.api.dto.SaludoResponse;
-import com.ejemplo.demo.domain.service.SaludoService;
-import org.springframework.web.bind.annotation.RequestParam;
 import com.ejemplo.demo.api.dto.SaludoRequest;
-import jakarta.validation.Valid;
-import org.springframework.web.bind.annotation.PostMapping;
-import org.springframework.web.bind.annotation.RequestBody;
-
-import java.util.Map;
+import com.ejemplo.demo.domain.service.SaludoService;
+import com.ejemplo.demo.api.contract.WorkshopApi;
+import com.ejemplo.demo.api.dto.GetWorkshopHealth200Response;
+import org.springframework.web.bind.annotation.RestController;
 
 @RestController
-@RequestMapping("/api/v1")
-public class SaludoController {
+public class SaludoController implements WorkshopApi{
 
-    @GetMapping
-    public ResponseEntity<Map<String, String>> health() {
-        return ResponseEntity.ok(Map.of(
-                "estado", "ok",
-                "mensaje", "Workshop Spring Boot activo"
-        ));
-    }
-
-  
-  
     private final SaludoService saludoService;
 
     public SaludoController(SaludoService saludoService) {
         this.saludoService = saludoService;
     }
 
-
-
-    @GetMapping("/saludos")
-    public ResponseEntity<SaludoResponse> saludar(
-            @RequestParam(defaultValue = "Mundo") String nombre
-    ) {
+    @Override
+    public ResponseEntity<GetWorkshopHealth200Response> getWorkshopHealth() {
+        GetWorkshopHealth200Response response = new GetWorkshopHealth200Response();
+        response.setEstado("ok");
+        response.setMensaje("Workshop Spring Boot activo");
+        return ResponseEntity.ok(response);
+    }
+    
+    @Override
+    public ResponseEntity<SaludoResponse> saludarPorGet(String nombre) {
         return ResponseEntity.ok(saludoService.crearSaludo(nombre));
     }
-    
 
-    
-
-
-    @PostMapping("/saludos")
-    public ResponseEntity<SaludoResponse> saludarPost(@Valid @RequestBody SaludoRequest request) {
-        return ResponseEntity.ok(saludoService.crearSaludo(request.nombre()));
+    @Override
+    public ResponseEntity<SaludoResponse> saludarPorPost(SaludoRequest saludoRequest) {
+    	return ResponseEntity.ok(saludoService.crearSaludo(saludoRequest.getNombre()));
     }
-    
 }
