# src/main/java/com/ejemplo/demo/api/dto/ProductoResponse.java
@@ -1,35 +1,0 @@
-package com.ejemplo.demo.api.dto;
-
-import lombok.Data;
-import java.math.BigDecimal;
-
-public class ProductoResponse {
-    private Long id;
-    private String nombre;
-    private BigDecimal precio;
-    private String categoriaNombre;
-	public Long getId() {
-		return id;
-	}
-	public void setId(Long id) {
-		this.id = id;
-	}
-	public String getNombre() {
-		return nombre;
-	}
-	public void setNombre(String nombre) {
-		this.nombre = nombre;
-	}
-	public BigDecimal getPrecio() {
-		return precio;
-	}
-	public void setPrecio(BigDecimal precio) {
-		this.precio = precio;
-	}
-	public String getCategoriaNombre() {
-		return categoriaNombre;
-	}
-	public void setCategoriaNombre(String categoriaNombre) {
-		this.categoriaNombre = categoriaNombre;
-	} 
-}
